--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -11,7 +11,8 @@ ensure spawnmanager
 ensure sessionmanager
 ensure basic-gamemode
 ensure hardcap
-ensure rconlog
+ensure bob74_ipl
+ensure island
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
