--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -10,9 +10,9 @@ ensure chat
 ensure spawnmanager
 ensure sessionmanager
 ensure basic-gamemode
-ensure hardcap
 ensure bob74_ipl
 ensure island
+ensure player-data
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
