connect api to fivem resources

--- a/.docker/api/Dockerfile
+++ b/.docker/api/Dockerfile
@@ -1,11 +1,14 @@
 FROM python:3.10
 
+ENV PYTHONPATH "${PYTHONPATH}:/api/app"
+
 WORKDIR /api
 
-COPY api/requirements.txt /api/requirements.txt
+COPY api/setup/requirements.txt /api/setup/requirements.txt
+COPY api/alembic.ini /api/alembic.ini
 
-RUN pip install --no-cache-dir --upgrade -r /api/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /api/setup/requirements.txt
 
 COPY api/app /api/app
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
