--- a/api/setup/requirements.txt
+++ b/api/setup/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+alembic==1.11.1
+    # via -r requirements.in
 anyio==3.7.0
     # via starlette
 click==8.1.3
@@ -12,17 +14,32 @@ exceptiongroup==1.1.1
     # via anyio
 fastapi==0.97.0
     # via -r requirements.in
+greenlet==2.0.2
+    # via sqlalchemy
 h11==0.14.0
     # via uvicorn
 idna==3.4
     # via anyio
+mako==1.2.4
+    # via alembic
+markupsafe==2.1.3
+    # via mako
+psycopg2-binary==2.9.6
+    # via -r requirements.in
 pydantic==1.10.9
     # via fastapi
 sniffio==1.3.0
     # via anyio
+sqlalchemy==2.0.16
+    # via
+    #   -r requirements.in
+    #   alembic
 starlette==0.27.0
     # via fastapi
 typing-extensions==4.6.3
-    # via pydantic
+    # via
+    #   alembic
+    #   pydantic
+    #   sqlalchemy
 uvicorn==0.22.0
     # via -r requirements.in
