--- a/resources/[gameplay]/player-data/package.json
+++ b/resources/[gameplay]/player-data/package.json
@@ -14,16 +14,18 @@
   "dependencies": {
     "@citizenfx/client": "^2.0.6497-1",
     "@citizenfx/server": "^2.0.6497-1",
-    "@types/node": "^20.2.5"
+    "@types/node": "^20.2.5",
+    "node-fetch": "^2.6.12"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-webpack-plugin": "^4.0.1",
     "prettier": "^2.8.8",
-    "remove-files-webpack-plugin": "^1.5.0",
+    "remove-files-webpack-plugin": "^1.1.3",
     "ts-loader": "^9.4.3",
     "typescript": "5.0.4",
     "webpack": "^5.86.0",
