--- a/resources/[gameplay]/player-data/src/server/tsconfig.json
+++ b/resources/[gameplay]/player-data/src/server/tsconfig.json
@@ -6,12 +6,12 @@
       },
       "outDir": "./",
       "noImplicitAny": false,
-      "module": "ES2020",
-      "target": "ES2021",
+      "module": "ES2022",
+      "target": "ES2022",
       "allowJs": false,
-      "lib": ["ES2021"],
+      "lib": ["ES2022"],
       "types": ["@citizenfx/server", "@types/node"],
-      "moduleResolution": "node16",
+      "moduleResolution": "Node",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "resolveJsonModule": true,
