--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -5,6 +5,7 @@ endpoint_add_udp "0.0.0.0:30120"
 sv_enforceGameBuild 2802
 
 # These resources will start by default.
+ensure player-data
 ensure mapmanager
 ensure chat
 ensure spawnmanager
@@ -12,7 +13,7 @@ ensure sessionmanager
 ensure basic-gamemode
 ensure bob74_ipl
 ensure island
-ensure player-data
+ensure fivem-map-skater
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
@@ -30,7 +31,7 @@ sets tags "default"
 
 # A valid locale identifier for your server's primary language.
 # For example "en-US", "fr-CA", "nl-NL", "de-DE", "en-GB", "pt-BR"
-sets locale "root-AQ" 
+sets locale "root-AQ"
 # please DO replace root-AQ on the line ABOVE with a real language! :)
 
 # Set an optional server info and connecting banner image url.
