update player-data to tofu-core

--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -5,7 +5,7 @@ endpoint_add_udp "0.0.0.0:30120"
 sv_enforceGameBuild 2802
 
 # These resources will start by default.
-ensure player-data
+ensure tofu-core
 ensure mapmanager
 ensure chat
 ensure spawnmanager
