:negative_squared_cross_mark: Remove money resource, add tofu-money-system submodule

--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -6,6 +6,7 @@ sv_enforceGameBuild 2802
 
 # These resources will start by default.
 ensure tofu-core
+ensure tofu-money-system
 ensure mapmanager
 ensure chat
 ensure spawnmanager
