--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "resources/[system]/tofu-core"]
 	path = resources/[system]/tofu-core
 	url = git@github.com:btambara/tofu-core.git
+
+[submodule "resources/[system]/tofu-money-system"]
+	path = resources/[system]/tofu-money-system
+	url = git@github.com:btambara/tofu-money-system.git
