add burgershot mlo

--- a/server-sample.cfg
+++ b/server-sample.cfg
@@ -7,14 +7,11 @@ sv_enforceGameBuild 2802
 # These resources will start by default.
 ensure tofu-core
 ensure tofu-money-system
-ensure mapmanager
-ensure chat
-ensure spawnmanager
+ensure [managers]
 ensure sessionmanager
 ensure basic-gamemode
-ensure bob74_ipl
-ensure island
-ensure fivem-map-skater
+ensure chat
+ensure [maps]
 
 # This allows players to use scripthook-based plugins such as the legacy Lambda Menu.
 # Set this to 1 to allow scripthook. Do note that this does _not_ guarantee players won't be able to use external plugins.
